[package]
name = "proksi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
hyper = { version = "0.14.20", features = ["full"] }
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
